fixes overflow

--- a/css/style.css
+++ b/css/style.css
@@ -9,12 +9,14 @@ body {
     margin: 0 auto;
     width: 414px;
     background-color: #FAFAFA;
+    overflow: hidden;
 }
 
 .profile-wrapper {
     margin: 0 auto;
     width: 414px;
     background-color: #f5f5f5;
+    overflow: hidden;
 }
 
 :root {
@@ -94,7 +96,7 @@ button:focus {
 }
 
 .round-button-2 {
-    background-color: #ffffff;
+    background-color: transparent;
     border: 1px solid #FA4A0C;
     padding: var(--button-padding);
     font-size: var(--button-font-size);
@@ -128,7 +130,7 @@ button:focus {
 }
 
 .square-button-2 {
-    background-color: #252b42;
+    background-color: transparent;
     border: 1px solid white;
     padding: 13px 23px;
     border-radius: 7px;
@@ -452,12 +454,12 @@ main h2 {
     text-align: center;
 }
 
-.product-img {
+.product-image {
     width: 100%;
     margin: 0 auto;
     z-index: 2;
     filter: drop-shadow(1px 1px 1rem #00000033);
-    position: absolute;
+    margin: -50px 0px;
 }
 
 .main-product h1 {
@@ -623,8 +625,9 @@ main h2 {
         font-size: 1rem;
     }
 
-    .header-image {
-        background-image: url(..images/banner-image.png);
+    .main-background {
+        background-image: url(../images/banner-image.png);
+        width: 100%;
     }
 
     .article-flex {
@@ -639,7 +642,7 @@ main h2 {
     }
 
     .app-download {
-        background-image: url(images/app-download-image.png);
+        background-image: url(../images/app-download-image.png);
         padding: 165px;
         text-align: center;
     }
@@ -686,18 +689,27 @@ main h2 {
 
     .main-flex h3 {
         margin-top: 50px;
+        color: white;
     }
 
     .main-flex h1 {
         margin: 10px 200px 30px;
+        color: white;
     }
 
     .main-flex p {
         font-size: 1.3rem;
+        color: white;
+        font-weight: normal;
     }
 
     .header-nav hr {
         display: none;
+    }
+
+    .round-button-2 {
+        color: white;
+        border: 1px solid white;
     }
 
     /* Below are for product page */
@@ -901,9 +913,10 @@ main h2 {
 
     .nav-item a:hover {
         background-color: #252b42;
+        color: white;
         border-radius: 10px;
         padding: 0px 20px;
-        transition: 0.3s ease-in;
+        transition: 0.5s ease-in;
     }
 
     .nav-item:focus {
@@ -920,20 +933,23 @@ main h2 {
     }
 
     #sign-out {
-        align-items: flex-end;
+        display: block;
+        margin: 260px 0px;
     }
 
+    /* Sets display to inline as it is display:none on larger screen sizes */
     .nav-item .material-symbols-outlined {
         color: white;
         margin-right: 8px;
         display: inline;
     }
 
+    /* Sets it up as block so it will appear on page, then moves it into position with absolute and coordinates */
     #hamburger-image {
         display: block;
         position: absolute;
         right: 0px;
-        top: 105px;
+        top: 108px;
     }
 
     /* For products page */
@@ -941,6 +957,7 @@ main h2 {
         transform: translateX(100px);
         object-fit: contain;
         position: relative;
+        overflow: hidden;
     }
 
 }
